# bitlora

./: .gitignore  README.md  kernel_tools.cuh  kernels.cuh  python_hqq_qdora.ipynb  python_hqq_qdora_batched.ipynb  python_hqq_qdora_clean.ipynb  python_hqq_qdora_v2.ipynb  run_bitlora.cu  verify python hqq_qdora.ipynb
_old/: python_hqq_qdora.ipynb
benchmarks/bottlenecks/: ReadMe.md
benchmarks/forward_kernel/: benchmark_fwd.ipynb  kernel_axis1_clean.py  profile_forward_kernel.sh  run_kernel_axis1.py
evals/: Eval_llama3_on_dharma2 -- manual.ipynb  Eval_llama3_on_dharma2.ipynb  Eval_phi15_on_dharma2.ipynb  ReadMe.md  dharma2.yaml  eval.sh  eval_local_phi15_dharma2.sh  eval_phi15_dharma2.sh  eval_phi15_hellaswag.sh  inspect lm-eval-harness.ipynb  save_phi15_locally.ipynb
exploratory/: batched_ops.ipynb  nbits_v_quality_hqq-qdora.ipynb  trn_qdora_llama2_different_bits.sh  trn_qdora_llama3_different_bits.sh
exploratory/gpu_in_pytorch_fwd_bwd/cuda/: cuda_in_pytorch.ipynb  custom_linear.cpp  custom_linear.cu  custom_linear_cuda.cpp
exploratory/gradient/: inspect_autograd_graph.ipynb  verify_derivative.ipynb  verify_derivative_batched.ipynb
exploratory/micro_benchmarking/: benchmarking_scaffold.ipynb
exploratory/nbits_v_quality/: ReadMe.md  nbits_v_quality_hqq-qdora.ipynb  trn_qdora_llama2.sh  trn_qdora_llama3.sh
exploratory/numba_cuda/: ReadMe.md  check_types.ipynb  generate_ptx.ipynb  kernel_1.py  matmul.ipynb  matmul_kernel.xlsx  monkeypatch.ipynb  numpy_doodle.ipynb  optimization_levels.ipynb  profile.sh  profiling.ipynb  simple_code_changes.ipynb  simple_profile.ipynb  util.py
exploratory/packing/: pack_doodle.ipynb
kernels/: CMakeLists.txt  Makefile  README.md  bindings.cu  bindings.py  dora.py  kernel_tools.cuh  kernels.cuh  run_bitlora.cu  setup_bindings.py
kernels/cuda/: Makefile  README.md  kernel_tools.cuh  setup_bindings.py
kernels/triton/: kernel.ipynb  kernel_axis0.ipynb  kernel_axis1.ipynb
models/: qgemma.py
(+2 files in other folders)
